--- a/estilo/style.css
+++ b/estilo/style.css
@@ -84,8 +84,8 @@ section.imagem > p {
 }
 
 section#img01 {
-    background-image: url('../imagens/background001.jpg');
-    background-position: right center;
+    background-image: url('../imagens/manga.jpg');
+    background-position: top bottom;
     
 }
 
